@@ -84,15 +84,6 @@ void pj_cleanup_lock()
 {
 }
 
-/************************************************************************/
-/*                            pj_init_lock()                            */
-/************************************************************************/
-
-static void pj_init_lock()
-
-{
-}
-
 #endif // def MUTEX_stub
 
 /************************************************************************/
@@ -133,15 +124,6 @@ void pj_release_lock()
 /*                          pj_cleanup_lock()                           */
 /************************************************************************/
 void pj_cleanup_lock()
-{
-}
-
-/************************************************************************/
-/*                            pj_init_lock()                            */
-/************************************************************************/
-
-static void pj_init_lock()
-
 {
 }
 
